--- a/style.css
+++ b/style.css
@@ -7,7 +7,10 @@
     width: 100vw;
     background-color: #59D9A1;
     padding-left: 30px;
-    padding-right: 10px;
+    padding-right: 30px;
+    display:flex;
+    justify-content: space-between;
+    flex-wrap: nowrap;
 }
   
 .logo {
@@ -16,8 +19,24 @@
   
 .nav-links {
     list-style: none;
+    display: flex;
+    margin-right: 3rem;
 }
-  
+  .flex-main{
+    display: flex;
+  }
+
+  .sidebar{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .main-content {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
 .nav-item a {
     display: inline-block;
     padding: 10px 15px;
@@ -75,6 +94,9 @@ footer {
     width: 100%;
     padding: 1rem;
     background-color: #59D9A1;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-evenly;
 }
 
 /* CODE YOUR FLEXBOXES HERE */
